--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10, <3.12"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
 tts = "^0.22.0"
 google-generativeai = "^0.8.4"
+python-multipart = "^0.0.20"
 
 
 [build-system]
